# cpp_homeworks

./: .gitignore  .gitlab-ci.yml  README.md
ex_a/: main.cpp
ex_b/: main.cpp
ex_c/: main.cpp
ex_d/: main.cpp
homework_1/: readme.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  Makefile  build.sh
homework_1/task_2/src/: main.cpp
homework_2/: CMakeLists.txt
homework_2/task_1/: CMakeLists.txt  main.cpp  task_1.cpp
homework_2/task_2/: CMakeLists.txt  task_2.cpp
homework_3/: CMakeLists.txt  homework_3.h  main.cpp
homework_3/api/: CMakeLists.txt  homework_3.h  html_writer.cpp  image_browser.cpp
homework_3/src/: homework_3.cpp  html_writer.cpp  image_browser.cpp  main.cpp
homework_3/tests/: CMakeLists.txt  create_image_browser  homework_3.h  test_html_writer.cpp  test_image_browser.cpp
homework_3/web_app/: test.html
homework_4/: CMakeLists.txt  README.md
homework_4/include/: homework_4.h  ipb_algorithm.hpp  ipb_namedvector.hpp
homework_4/src/: ipb_algorithm.cpp  ipb_namedvector.cpp  main.cpp
homework_4/tests/: CMakeLists.txt
homework_5/: CMakeLists.txt  readme.md
homework_5/include/: convert_dataset.hpp  homework_5.h  serialize.hpp
homework_5/src/: convert_dataset.cpp  main.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp
homework_6/: CMakeLists.txt  main
homework_6/include/: homework_6.h  image.hpp
homework_6/io_tools/: io_tools.cpp
homework_6/src/: image.cpp  main.cpp
homework_6/tests/: test_histogram.cpp
homework_7/: CMakeLists.txt
homework_7/include/: bow_dictionary.hpp  homework_7.h  kmeans.hpp
homework_7/src/: CMakeLists.txt  bow_dictionary.cpp  convert_dataset.cpp  kmeans.cpp  main.cpp  serialize.cpp
homework_7/tests/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_kmeans.cpp
