cmake_minimum_required(VERSION 3.16.3)
project(task_2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/results/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/results/bin)
message(STATUS ${CMAKE_INSTALL_PREFIX})
include_directories(include/)
add_library(ipb_arithmetic ./src/subtract.cpp ./src/sum.cpp)
add_executable(test_ipb_arithmetic ./src/main.cpp)
target_link_libraries(test_ipb_arithmetic ipb_arithmetic) 

install(DIRECTORY ${CMAKE_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS ipb_arithmetic DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)