cmake_minimum_required(VERSION 3.16.3)
project(task_2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/build)
message(STATUS ${CMAKE_INSTALL_PREFIX})
include_directories(include/)
add_library(ipb_arithmetic ./src/subtract.cpp ./src/sum.cpp)
add_executable(test_ipb_arithmetic ./src/main.cpp)
target_link_libraries(test_ipb_arithmetic ipb_arithmetic) 
install(DIRECTORY ${CMAKE_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS ipb_arithmetic DESTINATION ${CMAKE_CURRENT_SOURCE_DIRECTORY})
install(FILES include/ipb_arithmetic.hpp DESTINATION ../install/include)
install(FILES include/ipb_arithmetic/subtract.hpp DESTINATION ../install/include/ipb_arithmetic)
install(FILES include/ipb_arithmetic/sum.hpp DESTINATION ../install/include/ipb_arithmetic)
install(FILES build/libipb_arithmetic.a DESTINATION ../install/lib)
install(FILES build/libipb_arithmetic.a DESTINATION ../results/lib)
install(FILES build/test_ipb_arithmetic 
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
        DESTINATION ../results/bin)
